# bioturb

./: .gitignore  .gitmodules  README.md  requirements.txt
CellSimulatorSBT/: .clang-format  CMakeLists.txt  README.md  do-cmake.sh
CellSimulatorSBT/Dep/: cmake-pvfmm.sh  compile.err  compile_all.py  download_all.py
CellSimulatorSBT/Run/: jobsub.slurm
CellSimulatorSBT/Run/postprocess/: AsciiOrientOrder.py  PrintVTKData.py  RecordXF.py
CellSimulatorSBT/Run/result/: Result2PVD.py  clean.sh
CellSimulatorSBT/Run/scripts/: run_ompi.sh
CellSimulatorSBT/SRC/: CellSystem.hpp  CellSystem.tpp  Config.cpp  Config.h  GrowthTable.cpp  GrowthTable.h  HydroRodMobility.hpp  HydroRodOperator.hpp  HydroTable.cpp  HydroTable.h  main.cpp
CellSimulatorSBT/SimToolbox/Boundary/: CMakeLists.txt
CellSimulatorSBT/SimToolbox/Collision/: CPSolver.hpp
CellSimulatorSBT/SimToolbox/Constraint/: BCQPSolver.cpp  BCQPSolver.hpp  CMakeLists.txt  ConstraintCollector.cpp  ConstraintOperator.cpp
CellSimulatorSBT/SimToolbox/MPI/: CMakeLists.txt
CellSimulatorSBT/SimToolbox/Sylinder/: CMakeLists.txt  SylinderConfig.hpp  SylinderSystem.tpp
CellSimulatorSBT/SimToolbox/Trilinos/: CMakeLists.txt  Preconditioner.hpp  SubView_test.cpp  TpetraUtil.cpp  TpetraUtil.hpp
CellSimulatorSBT/SimToolbox/Util/: CMakeLists.txt
analysis/: config.py  correlation.py  msd.py  sbt.py
data/examples/v1.0_nu0.0625_L25_A5/: CellConfig.yaml
data/examples/v1.0_nu0.0625_L25_A5/result/result0-199/: SylinderDist_100.pvtp  SylinderDist_r0_100.vtp  SylinderDist_r1_100.vtp  Sylinder_100.pvtp  Sylinder_r0_100.vtp  Sylinder_r1_100.vtp
data/processed/continuum/: L175.mat  correlation.m  correlation.mat  timeStepInfo.txt  unorm.m  unorm.mat
figs/: make_figs.m
figs/scripts/: arrow3d.m  colorbarCinematic.m  fig1.m  fig1_cmap.mat  fig2.m  fig3.m  fig4.m  fig5.m  fig6.m  fig7.m  fig8.m  tubeplot.m
figs/scripts/utils/: formatCorrelationFunctions.m  journal_figure.m  magma.m  plotCorrelationFunction.m  plotSnapshots.m  resizeOrderParameter.m  resizeVelocity.m  subplotLabel.m
scripts/: config.py  correlation.py  msd.py  sbt.py
